[package]
name = "flappy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "~0.8.7"

# Security overrides for transitive dependencies with known vulnerabilities
# Adding these as direct dependencies forces Cargo to use secure versions
# crossbeam-utils < 0.8.7 has memory safety issues - upgrading to 0.8.21
crossbeam-utils = "0.8.21"
# mio <= 0.8.10 has security vulnerabilities - upgrading to 0.8.11
mio = "0.8.11"
